apps/shop-order-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-order-service
  template:
    metadata:
      labels:
        app: shop-order-service
    spec:
      containers:
        - name: shop-order-service
          image: shop-order-service:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
