apps/shop-order-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-order-service
spec:
  ingressClassName: nginx
  rules:
    - host: shop-order.local
      http:
        paths:
          - backend:
              service:
                name: shop-order-service
                port:
                  number: 80
            pathType: Prefix
            path: /
